//В данном случаем применяется синтаксис "proto3". Если явным образом не указать версию, то по умолчанию будет использоваться более старая версия - proto2.
syntax = "proto3";
 
//пространство имен, которое будет использоваться с этим сервисом:
//Если не указать эту настройку, то в качестве пространства имен будет использоваться название пакета в PascalCase.
option csharp_namespace = "GrpcServiceApp";

//название пакета
package BothWaysStreamExample;
 
// сообщение от клиента содержит content
message RequestBothWay{ 
    string content = 1;
}
 
// сообщение клиенту содержит content
message ResponseBothWay{ 
    string content=1;
}
 
// определение сервиса MessengerBothWaysStreaming
service MessengerBothWaysStreaming{
  // Двунаправленняя потоковая передача
  rpc StreamingBothWays (stream RequestBothWay) returns (stream ResponseBothWay);
}